# NotarAI

./: .eslint.config.js  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  eslint.config.js  notarai.spec.json  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
.claude/: notarai.spec.json  settings.json
.claude/commands/: notarai-bootstrap.md  notarai-reconcile.md
.claude/rules/: rust.md  schema-version.md  style.md  testing.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
.notarai/: README.md  ci.spec.yaml  cli.spec.yaml  docs-site.spec.yaml  docs.spec.yaml  reconciliation_state.json  style.spec.yaml  system.spec.yaml
commands/: notarai-bootstrap.md  notarai-reconcile.md
docs/: book.toml  comparison-to-sdd.md  mermaid-init.js  motivation-system-diagrams.md  motivation.md
docs-site/: .gitignore  README.md  astro.config.mjs  build.sh  package.json
docs-site/public-root/: index.html
docs/src/: SUMMARY.md  contributing.md  index.md
scripts/: build-readme.sh  install.ps1  install.sh
src/: bin.ts  main.rs
src/commands/: cache.rs  hook-validate.ts  hook_validate.rs  init.rs  init.ts  mcp.rs  mod.rs  schema_bump.rs  state.rs  update.rs  validate.rs  validate.ts
src/core/: cache.rs  mcp_tools.rs  mod.rs  schema.rs  state.rs  update.rs  validator.rs  yaml.rs
src/lib/: schema.ts  validator.ts  yaml.ts
templates/: claude-context.md  notarai-readme.md
tests/: bin.test.ts  bin_test.rs  cache_test.rs  init_test.rs  mcp_test.rs  state_test.rs  update_test.rs
tests/commands/: hook-validate.test.ts  init.extract-section.test.ts  init.test.ts
tests/lib/: validator.test.ts  yaml.test.ts
(+25 files in other folders)
