[package]
name = "notarai"
version = "0.2.1"
edition = "2024"
description = "CLI validator for NotarAI spec files"
license = "Apache-2.0"
repository = "https://github.com/davidroeca/NotarAI"
homepage = "https://github.com/davidroeca/NotarAI"
keywords = ["reconciliation", "llm", "mcp", "spec-driven", "linting"]
categories = ["command-line-utilities", "development-tools", "artificial-intelligence"]
readme = "README.md"

[[bin]]
name = "notarai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
# Right now, this disables web features which pull in reqwest, etc. Switch to defaults if needed
jsonschema = { version = "0.43", default-features = false, features = ["resolve-file"]}
walkdir = "2"
rusqlite = { version = "0.38", features = ["bundled"] }
blake3 = "1"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
